fixed padding overflow on mobile login btn

--- a/client/src/components/Navbar/query.scss
+++ b/client/src/components/Navbar/query.scss
@@ -27,7 +27,6 @@
 
         a:nth-child(1) {
           opacity: 1;
-          padding-top: 101px;
         }
 
         .mobile-login {
@@ -41,7 +40,7 @@
           flex-direction: column;
           // width: 90%;
           margin: 0 auto;
-
+          
           .mobile-img-wrapper {
             display: block;
             width: 90%;
